# celebrate_manager_bot

./: .env.example  AGENTS.md  config.py  main.py  pyproject.toml  scheduler.py
bot/: handlers.py  keyboards.py
db/: models.py  repository.py
services/: holiday_service.py  notification_service.py  user_service.py
