[project]
name = "celebrate-manager-bot"
version = "0.1.0"
description = "Telegram bot that sends daily notifications about holidays"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0,<4.0",
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "APScheduler>=3.10,<4.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["aiogram", "aiogram.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
